--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/github-actions/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React v2</title>
+    <title>Vite + React</title>
     <script type="module" crossorigin src="/github-actions/assets/index.edeff469.js"></script>
     <link rel="stylesheet" href="/github-actions/assets/index.3fce1f81.css">
   </head>
